# research

onnx2fx-prototype/: README.md  investigate-onnx-exporter.md  mlp.onnx  pyproject.toml
onnx2fx-prototype/example/: mlp.py  resnet18.py
onnx2fx-prototype/src/onnx_to_fx/: __init__.py  converter.py  errors.py  graph_builder.py  ops.py  utils.py
onnx2fx-prototype/tests/: __init__.py  common.py  test_converter.py  test_e2e_models.py  test_ops.py
