[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-to-fx"
version = "0.1.0"
description = "Prototype library to convert ONNX models into PyTorch FX GraphModules."
authors = [{name = "Research Prototype"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "onnx",
    "onnxruntime",
    "torch",
]

[dependency-groups]
dev = [
    "onnxscript",
    "pytest",
    "torchvision",
]

[project.urls]
Homepage = "https://example.com/onnx-to-fx"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
